infra/tekton/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton
spec:
  ingressClassName: tailscale
  rules:
    - host: tekton.tailc27027.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tekton-dashboard
                port:
                  number: 9097
  tls:
    - hosts:
        - tekton.tailc27027.ts.net
      secretName: tekton-dashboard-tls
